--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
+    "prettier": "2.1.2",
     "source-map-loader": "^1.1.1",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
