--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,20 @@
 {
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error"
-  }
+    "prettier/prettier": ["error", { "endOfLine": "auto" }]
+  },
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "env": {
+    "browser": true,
+    "node": true,
+    "es6": true
+  },
+  "ecmaFeatures": {
+    "modules": true,
+    "spread": true,
+    "restParams": true
+  },
+  "parser": "babel-eslint"
 }
