--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open --config ./webpack.config.cjs",
     "build": "webpack",
+    "server": "node-env-run server --exec nodemon | pino-colada",
+    "proxy": "http://localhost:3001",
+    "dev": "run-p server start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,10 +18,17 @@
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
+    "body-parser": "^1.19.0",
     "css-loader": "^4.3.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "express": "^4.17.1",
+    "express-pino-logger": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.1.0",
     "prettier": "2.1.2",
     "source-map-loader": "^1.1.1",
     "typescript": "^4.0.3",
@@ -27,6 +37,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
