--- a/package.json
+++ b/package.json
@@ -16,28 +16,36 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/domhandler": "^2.4.1",
+    "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
     "body-parser": "^1.19.0",
     "css-loader": "^4.3.0",
+    "css-modules-typescript-loader": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.0.0",
     "node-env-run": "^4.0.2",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0",
     "prettier": "2.1.2",
+    "react-html-parser": "^2.0.2",
+    "sass-loader": "^10.0.3",
     "source-map-loader": "^1.1.1",
+    "style-loader": "^2.0.0",
     "typescript": "^4.0.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/react-html-parser": "^2.0.1",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
