--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
     "preserveConstEnums": true,
     "removeComments": true,
     "sourceMap": true,
-    "target": "es5"
+    "target": "es5",
+    "typeRoots": ["node_modules/@types", "src/typings"],
+    "types": ["node"]
   },
-  "include": [
-    "src/index.tsx"
-  ]
+  "include": ["src/**/*"]
 }
