--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.config.cjs",
-    "build": "webpack",
+    "build": "webpack --config ./webpack.config.cjs --mode production",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
     "dev": "run-p server start",
@@ -16,11 +16,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@types/domhandler": "^2.4.1",
     "@types/node": "^14.11.8",
     "@types/react": "^16.9.51",
     "@types/react-dom": "^16.9.8",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "css-loader": "^4.3.0",
     "css-modules-typescript-loader": "^4.0.1",
