--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
     "@types/domhandler": "^2.4.1",
-    "@types/node": "^14.11.8",
-    "@types/react": "^16.9.51",
-    "@types/react-dom": "^16.9.8",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
@@ -32,26 +32,28 @@
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^1.0.0",
+    "mini-css-extract-plugin": "^1.3.0",
     "node-env-run": "^4.0.2",
     "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0",
     "prettier": "2.1.2",
     "react-html-parser": "^2.0.2",
-    "sass-loader": "^10.0.3",
-    "source-map-loader": "^1.1.1",
+    "sass-loader": "^10.0.5",
+    "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.0.5",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@types/react-html-parser": "^2.0.1",
+    "aws-amplify": "^3.3.7",
+    "aws-amplify-react": "^4.2.11",
     "axios": "^0.20.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
