--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.config.cjs",
     "build": "webpack --config ./webpack.config.cjs --mode production",
+    "build:extension": "bash ./script/build.sh",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
     "dev": "run-p server start",
@@ -26,6 +27,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^4.3.0",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.4",
@@ -54,6 +56,8 @@
     "aws-amplify-react": "^4.2.11",
     "axios": "^0.20.0",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-nano": "^1.1.1"
   }
 }
