feat: inject component in every page in chrome using

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.config.cjs",
     "build": "webpack --config ./webpack.config.cjs --mode production",
-    "build:extension": "bash ./script/build.sh",
+    "build:extension": "rm -rf build && bash ./script/build.sh",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
     "dev": "run-p server start",
