--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.config.cjs",
-    "build": "webpack --config ./webpack.config.cjs --mode production",
+    "build": "webpack --config ./webpack.config.cjs --mode development",
     "build:extension": "rm -rf build && bash ./script/build.sh",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
@@ -51,12 +51,14 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/chrome": "0.0.127",
     "@types/react-html-parser": "^2.0.1",
     "aws-amplify": "^3.3.7",
     "aws-amplify-react": "^4.2.11",
     "axios": "^0.20.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-frame-component": "^4.1.3",
     "webpack-manifest-plugin": "^3.0.0",
     "webpack-nano": "^1.1.1"
   }
