--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,23 @@
     "scripts": ["background.js"],
     "persistent": false
   },
-  "permissions": ["storage", "declarativeContent", "tabs", "background", "<all_urls>"],
-  "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'"
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.js", "alignPopup.js"]
+    }
+  ],
+  "permissions": [
+    "storage",
+    "declarativeContent",
+    "tabs",
+    "background",
+    "<all_urls>",
+    "contextMenus",
+    "activeTab",
+    "bookmarks",
+    "*://*/*"
+  ],
+  "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'",
+  "web_accessible_resources": ["contentScript.js"]
 }
