--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "target": "es5",
     "typeRoots": ["node_modules/@types", "src/typings"],
-    "types": ["node"]
+    "types": ["node",  "chrome"]
   },
   "include": ["src/**/*"]
 }
