--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "aws-amplify-react": "^4.2.11",
     "axios": "^0.20.0",
     "react": "^16.14.0",
+    "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
     "react-frame-component": "^4.1.3",
     "webpack-manifest-plugin": "^3.0.0",
