--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js", "alignPopup.js"]
+      "js": ["contentScript.js", "alignPopup.js", "index.css"]
     }
   ],
   "permissions": [
@@ -33,5 +33,5 @@
     "*://*/*"
   ],
   "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'",
-  "web_accessible_resources": ["contentScript.js"]
+  "web_accessible_resources": ["contentScript.js", "index.css"]
 }
