--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
     "react-frame-component": "^4.1.3",
+    "react-loader-spinner": "^3.1.14",
     "webpack-manifest-plugin": "^3.0.0",
     "webpack-nano": "^1.1.1"
   }
