--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.0",
     "node-env-run": "^4.0.2",
@@ -46,6 +47,7 @@
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
     "typescript": "^4.0.5",
+    "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
