--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,5 +33,5 @@
     "*://*/*"
   ],
   "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'",
-  "web_accessible_resources": ["contentScript.js", "index.css"]
+  "web_accessible_resources": ["contentScript.js", "index.css", "images/banner.png"]
 }
