--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.dev.cjs",
-    "build": "webpack --config ./webpack.dev.cjs --mode production",
+    "build": "webpack --config ./webpack.dev.cjs",
+    "build:prod": "webpack --config webpack.prod.js",
     "build:extension": "rm -rf build && bash ./script/build.sh",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
