--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Cracking English Everyday extension for Chrome",
+  "name": "Cracking English By Clark",
   "description": "This extension is build for cracking English everyday",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "manifest_version": 2,
   "icons": {
     "512": "./images/superdev.png"
@@ -18,7 +18,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["contentScript.js", "index.css"]
+      "js": ["contentScript.js", "index.css", "index-foreground.css"]
     }
   ],
   "permissions": [
@@ -33,5 +33,5 @@
     "*://*/*"
   ],
   "content_security_policy": "script-src 'self' 'sha256-GgRxrVOKNdB4LrRsVPDSbzvfdV4UqglmviH9GoBJ5jk='; object-src 'self'",
-  "web_accessible_resources": ["contentScript.js", "index.css", "images/banner.png"]
+  "web_accessible_resources": ["contentScript.js", "index.css", "images/banner.png", "index-foreground.css"]
 }
