--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "webpack --config ./webpack.dev.cjs",
     "build:prod": "webpack --config webpack.prod.cjs",
     "build:extension": "rm -rf build && bash ./script/build.sh",
+    "build:analyze": "npm run build:prod -- --env.addons=bundleanalyzer",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
     "dev": "run-p server start",
@@ -50,6 +51,7 @@
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.7.3"
