--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sass-loader": "^10.0.5",
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.14",
     "typescript": "^4.0.5",
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
