--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --open --config ./webpack.dev.cjs",
     "build": "webpack --config ./webpack.dev.cjs",
     "build:prod": "webpack --config webpack.prod.cjs",
-    "build:extension": "rm -rf build && bash ./script/build.sh",
+    "build:extension": "rm -rf build dist && bash ./script/build.sh",
     "build:analyze": "npm run build:prod -- --env.addons=bundleanalyzer",
     "server": "node-env-run server --exec nodemon | pino-colada",
     "proxy": "http://localhost:3001",
