--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ amplifyconfiguration.json
 amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
+
+#electron
+cracking-english-everyday-win32-x64
