--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build:extension": "rm -rf build dist && bash ./script/build.sh",
     "build:analyze": "npm run build:prod -- --env.addons=bundleanalyzer",
     "server": "node-env-run server --exec nodemon | pino-colada",
+    "ebuild": "npm run build && node_modules/.bin/build",
+    "start:electron": "concurrently \"npm start\" \"wait-on http://localhost:8080 && electron electron/main.js\"",
     "proxy": "http://localhost:3001",
     "dev": "run-p server start",
     "debug": "node --inspect ./server/index.js",
@@ -28,12 +30,10 @@
     "@types/react-dom": "^16.9.9",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.1.0",
-    "body-parser": "^1.19.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^4.3.0",
     "css-modules-typescript-loader": "^4.0.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "express": "^4.17.1",
     "express-pino-logger": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
@@ -44,7 +44,6 @@
     "npm-run-all": "^4.1.5",
     "pino-colada": "^2.1.0",
     "prettier": "2.1.2",
-    "react-html-parser": "^2.0.2",
     "sass-loader": "^10.0.5",
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
@@ -55,11 +54,21 @@
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "electron": "^11.2.0",
+    "electron-builder": "^22.9.1",
+    "electron-is-dev": "^1.2.0",
+    "wait-on": "^5.2.1",
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-nano": "^1.1.1",
+    "concurrently": "^5.3.0",
+    "@types/chrome": "0.0.127",
+    "@types/react-html-parser": "^2.0.1"
   },
   "dependencies": {
-    "@types/chrome": "0.0.127",
-    "@types/react-html-parser": "^2.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "react-html-parser": "^2.0.2",
     "aws-amplify": "^3.3.7",
     "aws-amplify-react": "^4.2.11",
     "axios": "^0.20.0",
@@ -67,8 +76,6 @@
     "react-device-detect": "^1.15.0",
     "react-dom": "^16.14.0",
     "react-frame-component": "^4.1.3",
-    "react-loader-spinner": "^3.1.14",
-    "webpack-manifest-plugin": "^3.0.0",
-    "webpack-nano": "^1.1.1"
+    "react-loader-spinner": "^3.1.14"
   }
 }
