--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cracking-english-everyday",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "start": "webpack-dev-server --open --config ./webpack.dev.cjs",
     "build": "webpack --config ./webpack.dev.cjs",
